# youtube-download-extension

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
browser_extension/: eslint.config.js  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
browser_extension/public/: manifest.json
browser_extension/src/: background.ts
browser_extension/src/content/: contentStyles.ts  main.ts
browser_extension/src/popup/: App.tsx  styles.css
browser_extension/src/shared/: bridge.ts  storage.ts  types.ts
youtube_downloader/: __init__.py  bridge.py  cli.py
